tests/snapshots/integration__integration_tests__init__init_fish_prompt_hook.snap
---
source: tests/integration_tests/init.rs
info:
  program: wt
  args:
    - init
    - fish
    - "--hook"
    - prompt
  env:
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1704067200"
---
success: true
exit_code: 0
----- stdout -----
# worktrunk shell integration for fish

# Helper function to parse wt output and handle directives
function _wt_exec
    set -l output (command wt $argv 2>&1)
    set -l exit_code $status

    # Parse output line by line
    for line in (string split \n -- $output)
        if string match -q '__WORKTRUNK_CD__*' -- $line
            # Extract path and change directory
            cd (string replace '__WORKTRUNK_CD__' '' -- $line)
        else
            # Regular output - print it
            echo $line
        end
    end

    return $exit_code
end

# Override wt command to add --internal flag for switch and finish
function wt
    set -l subcommand $argv[1]

    switch $subcommand
        case switch finish
            # Commands that need --internal for directory change support
            _wt_exec $subcommand --internal $argv[2..-1]
        case '*'
            # All other commands pass through directly
            command wt $argv
    end
end


# Prompt hook for tracking current worktree
function _wt_prompt_hook --on-event fish_prompt
    # Call wt to update tracking
    command wt hook prompt 2>/dev/null; or true
end


----- stderr -----
