tests/snapshots/integration__integration_tests__init__init_zsh.snap
---
source: tests/integration_tests/init.rs
info:
  program: wt
  args:
    - init
    - zsh
  env:
    CLICOLOR_FORCE: "1"
    COLUMNS: "150"
    GIT_AUTHOR_DATE: "2025-01-01T00:00:00Z"
    GIT_COMMITTER_DATE: "2025-01-01T00:00:00Z"
    GIT_CONFIG_GLOBAL: /dev/null
    GIT_CONFIG_SYSTEM: /dev/null
    GIT_EDITOR: ""
    LANG: C
    LC_ALL: C
    SOURCE_DATE_EPOCH: "1761609600"
    WORKTRUNK_CONFIG_PATH: /var/folders/wf/s6ycxvvs4ln8qsdbfx40hnc40000gn/T/.tmpFxEupS/test-config.toml
---
success: true
exit_code: 0
----- stdout -----
# worktrunk shell integration for zsh

# Only initialize if wt is available (in PATH or via WORKTRUNK_BIN)
if command -v wt >/dev/null 2>&1 || [[ -n "${WORKTRUNK_BIN:-}" ]]; then
    # Use WORKTRUNK_BIN if set, otherwise default to 'wt'
    # This allows testing development builds: export WORKTRUNK_BIN=./target/debug/wt
    _WORKTRUNK_CMD="${WORKTRUNK_BIN:-wt}"

# Shared directive parser for POSIX shells (bash, zsh, oil).
# Streams worktrunk's NUL-delimited output in real-time via FIFO while keeping
# stderr attached to the TTY for child processes (colors, progress bars).
#
# Note: Named without leading underscore to avoid being filtered by shell
# snapshot systems (e.g., Claude Code) that exclude private functions.
# Note: Uses ${_WORKTRUNK_CMD:-wt} fallback because shell snapshot
# systems may capture functions but not environment variables.
wt_exec() {
    local exec_cmd="" chunk="" exit_code=0 tmp_dir="" fifo_path="" runner_pid=""

    # Create temp directory with FIFO for streaming output
    tmp_dir=$(mktemp -d "${TMPDIR:-/tmp}/wt.XXXXXX") || {
        echo "Failed to create temp directory for worktrunk shim" >&2
        return 1
    }
    fifo_path="$tmp_dir/stdout.fifo"

    if ! mkfifo "$fifo_path"; then
        echo "Failed to create FIFO for worktrunk shim" >&2
        /bin/rm -rf "$tmp_dir"
        return 1
    fi

    # Run worktrunk in background, piping stdout to FIFO
    # (stderr stays attached to TTY for child process colors/progress)
    command "${_WORKTRUNK_CMD:-wt}" "$@" >"$fifo_path" &
    runner_pid=$!

    # Parse directives as they stream in
    while IFS= read -r -d '' chunk || [[ -n "$chunk" ]]; do
        if [[ "$chunk" == __WORKTRUNK_CD__* ]]; then
            # Directory change directive
            local path="${chunk#__WORKTRUNK_CD__}"
            \cd "$path"
        elif [[ "$chunk" == __WORKTRUNK_EXEC__* ]]; then
            # Command execution directive (deferred until after worktrunk exits)
            exec_cmd="${chunk#__WORKTRUNK_EXEC__}"
        else
            # Regular output - print to stdout
            [[ -n "$chunk" ]] && printf '%s\n' "$chunk"
        fi
    done <"$fifo_path"

    # Wait for worktrunk to complete and capture its exit code
    wait "$runner_pid" >/dev/null 2>&1 || exit_code=$?

    # Cleanup
    /bin/rm -f "$fifo_path"
    /bin/rmdir "$tmp_dir" 2>/dev/null || true

    # Execute deferred command if specified (its exit code takes precedence)
    if [[ -n "$exec_cmd" ]]; then
        eval "$exec_cmd"
        exit_code=$?
    fi

    return "${exit_code:-0}"
}

    # Override wt command to add --internal flag
    wt() {
        # Initialize _WORKTRUNK_CMD if not set (e.g., after shell snapshot restore)
        if [[ -z "$_WORKTRUNK_CMD" ]]; then
            _WORKTRUNK_CMD="${WORKTRUNK_BIN:-wt}"
        fi

        local use_source=false
        local -a args
        local saved_cmd="$_WORKTRUNK_CMD"

        # Check for --source flag and strip it
        for arg in "$@"; do
            if [[ "$arg" == "--source" ]]; then
                use_source=true
            else
                args+=("$arg")
            fi
        done

        # If --source was specified, build and use local debug binary
        if [[ "$use_source" == true ]]; then
            if ! cargo build --quiet; then
                _WORKTRUNK_CMD="$saved_cmd"
                return 1
            fi
            _WORKTRUNK_CMD="./target/debug/wt"
        fi

        # Force colors if stderr is a TTY (directive mode outputs to stderr)
        # Respects NO_COLOR and explicit CLICOLOR_FORCE
        if [[ -z "${NO_COLOR:-}" && -z "${CLICOLOR_FORCE:-}" ]]; then
            if [[ -t 2 ]]; then export CLICOLOR_FORCE=1; fi
        fi

        # Always use --internal mode for directive support
        wt_exec --internal "${args[@]}"

        # Restore original command
        local result=$?
        _WORKTRUNK_CMD="$saved_cmd"
        return $result
    }

    # Register Clap-based completions (auto-updates after wt upgrades)
    if (( $+functions[compdef] )); then
        local completion_script
        completion_script=$(COMPLETE=zsh "$_WORKTRUNK_CMD" 2>/dev/null)
        eval "$completion_script"
    fi
fi

# Static completions (commands and flags)
#compdef wt

autoload -U is-at-least

_wt() {
    typeset -A opt_args
    typeset -a _arguments_options
    local ret=1

    if is-at-least 5.2; then
        _arguments_options=(-s -S -C)
    else
        _arguments_options=(-s -C)
    fi

    local context curcontext="$curcontext" state line
    _arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
'-V[Print version]' \
'--version[Print version]' \
":: :_wt_commands" \
"*::: :->wt" \
&& ret=0
    case $state in
    (wt)
        words=($line[1] "${words[@]}")
        (( CURRENT += 1 ))
        curcontext="${curcontext%:*:*}:wt-command-$line[1]:"
        case $line[1] in
            (init)
_arguments "${_arguments_options[@]}" : \
'--command-name=[Command name]:COMMAND_NAME:_default' \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
':shell -- Shell to generate code for:(bash fish zsh)' \
&& ret=0
;;
(config)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help (see more with '\''--help'\'')]' \
'--help[Print help (see more with '\''--help'\'')]' \
":: :_wt__config_commands" \
"*::: :->config" \
&& ret=0

    case $state in
    (config)
        words=($line[1] "${words[@]}")
        (( CURRENT += 1 ))
        curcontext="${curcontext%:*:*}:wt-config-command-$line[1]:"
        case $line[1] in
            (init)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(list)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(refresh-cache)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(shell)
_arguments "${_arguments_options[@]}" : \
'--shell=[Shell to configure]:SHELL:(bash fish zsh)' \
'--command-name=[Command name]:COMMAND_NAME:_default' \
'-C+[Change working directory]:path:_files' \
'-f[Skip confirmation prompt]' \
'--force[Skip confirmation prompt]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help (see more with '\''--help'\'')]' \
'--help[Print help (see more with '\''--help'\'')]' \
&& ret=0
;;
(status)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
":: :_wt__config__status_commands" \
"*::: :->status" \
&& ret=0

    case $state in
    (status)
        words=($line[1] "${words[@]}")
        (( CURRENT += 1 ))
        curcontext="${curcontext%:*:*}:wt-config-status-command-$line[1]:"
        case $line[1] in
            (set)
_arguments "${_arguments_options[@]}" : \
'--branch=[Target branch (defaults to current)]:BRANCH:_default' \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
':value -- Status emoji to display:_default' \
&& ret=0
;;
(unset)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
'::target -- Branch or "*" for all:_default' \
&& ret=0
;;
        esac
    ;;
esac
;;
        esac
    ;;
esac
;;
(beta)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
":: :_wt__beta_commands" \
"*::: :->beta" \
&& ret=0

    case $state in
    (beta)
        words=($line[1] "${words[@]}")
        (( CURRENT += 1 ))
        curcontext="${curcontext%:*:*}:wt-beta-command-$line[1]:"
        case $line[1] in
            (run-hook)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-f[Skip approval prompts]' \
'--force[Skip approval prompts]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
':hook_type -- Hook type to run:(post-create post-start pre-commit pre-merge post-merge)' \
&& ret=0
;;
(commit)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-f[Skip approval prompts]' \
'--force[Skip approval prompts]' \
'--no-verify[Skip pre-commit hooks]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(squash)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-f[Skip approval prompts]' \
'--force[Skip approval prompts]' \
'--no-verify[Skip pre-commit hooks]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
'::target -- Target branch (defaults to default branch):_default' \
&& ret=0
;;
(push)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'--allow-merge-commits[Allow merge commits]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help (see more with '\''--help'\'')]' \
'--help[Print help (see more with '\''--help'\'')]' \
'::target -- Target branch (defaults to default branch):_default' \
&& ret=0
;;
(rebase)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
'::target -- Target branch (defaults to default branch):_default' \
&& ret=0
;;
(ask-approvals)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-f[Skip approval prompts]' \
'--force[Skip approval prompts]' \
'--all[Show all commands]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(clear-approvals)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-g[Clear global approvals]' \
'--global[Clear global approvals]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
&& ret=0
;;
(select)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help (see more with '\''--help'\'')]' \
'--help[Print help (see more with '\''--help'\'')]' \
&& ret=0
;;
        esac
    ;;
esac
;;
(list)
_arguments "${_arguments_options[@]}" : \
'--format=[Output format]:FORMAT:((table\:"Human-readable table format"
json\:"JSON output"))' \
'-C+[Change working directory]:path:_files' \
'--branches[Include branches without worktrees]' \
'--full[Show CI, conflicts, and full diffs]' \
'(--no-progressive)--progressive[Enable progressive rendering (show rows as data arrives)]' \
'--no-progressive[Disable progressive rendering (collect all data before displaying)]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help (see more with '\''--help'\'')]' \
'--help[Print help (see more with '\''--help'\'')]' \
&& ret=0
;;
(switch)
_arguments "${_arguments_options[@]}" : \
'-b+[Base branch (defaults to default branch)]:BASE:_default' \
'--base=[Base branch (defaults to default branch)]:BASE:_default' \
'-x+[Execute command after switching]:EXECUTE:_default' \
'--execute=[Execute command after switching]:EXECUTE:_default' \
'-C+[Change working directory]:path:_files' \
'-c[Create a new branch]' \
'--create[Create a new branch]' \
'-f[Skip approval prompts]' \
'--force[Skip approval prompts]' \
'--no-verify[Skip project hooks]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
':branch -- Branch, path, '\''@'\'' (HEAD), '\''-'\'' (previous), or '\''^'\'' (main):_default' \
&& ret=0
;;
(remove)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'--no-delete-branch[Keep branch after removal]' \
'-D[Delete unmerged branches]' \
'--force-delete[Delete unmerged branches]' \
'--no-background[Run removal in foreground]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help]' \
'--help[Print help]' \
'*::worktrees -- Worktree or branch (@ for current):_default' \
&& ret=0
;;
(merge)
_arguments "${_arguments_options[@]}" : \
'-C+[Change working directory]:path:_files' \
'--no-squash[Skip commit squashing]' \
'--no-commit[Skip commit, squash, and rebase]' \
'--no-remove[Keep worktree after merge]' \
'--no-verify[Skip project hooks]' \
'-f[Skip approval prompts]' \
'--force[Skip approval prompts]' \
'--tracked-only[Stage tracked files only]' \
'-v[Show commands and debug info]' \
'--verbose[Show commands and debug info]' \
'-h[Print help (see more with '\''--help'\'')]' \
'--help[Print help (see more with '\''--help'\'')]' \
'::target -- Target branch (defaults to default branch):_default' \
&& ret=0
;;
        esac
    ;;
esac
}

(( $+functions[_wt_commands] )) ||
_wt_commands() {
    local commands; commands=(
'init:Generate shell integration code' \
'config:Manage configuration. For AI commit setup, run\: \`wt config --help\` (see '\''LLM SETUP GUIDE'\'').' \
'beta:Development and testing utilities' \
'list:List worktrees and optionally branches' \
'switch:Switch to a worktree' \
'remove:Remove worktree and branch' \
'merge:Merge worktree into target branch' \
    )
    _describe -t commands 'wt commands' commands "$@"
}
(( $+functions[_wt__beta_commands] )) ||
_wt__beta_commands() {
    local commands; commands=(
'run-hook:Run project hook' \
'commit:Commit changes with LLM-generated message' \
'squash:Squash commits with LLM-generated message' \
'push:Push changes to target branch' \
'rebase:Rebase onto target' \
'ask-approvals:Store approvals in config' \
'clear-approvals:Clear approved commands from config' \
'select:Interactive worktree selector' \
    )
    _describe -t commands 'wt beta commands' commands "$@"
}
(( $+functions[_wt__beta__ask-approvals_commands] )) ||
_wt__beta__ask-approvals_commands() {
    local commands; commands=()
    _describe -t commands 'wt beta ask-approvals commands' commands "$@"
}
(( $+functions[_wt__beta__clear-approvals_commands] )) ||
_wt__beta__clear-approvals_commands() {
    local commands; commands=()
    _describe -t commands 'wt beta clear-approvals commands' commands "$@"
}
(( $+functions[_wt__beta__commit_commands] )) ||
_wt__beta__commit_commands() {
    local commands; commands=()
    _describe -t commands 'wt beta commit commands' commands "$@"
}
(( $+functions[_wt__beta__push_commands] )) ||
_wt__beta__push_commands() {
    local commands; commands=()
    _describe -t commands 'wt beta push commands' commands "$@"
}
(( $+functions[_wt__beta__rebase_commands] )) ||
_wt__beta__rebase_commands() {
    local commands; commands=()
    _describe -t commands 'wt beta rebase commands' commands "$@"
}
(( $+functions[_wt__beta__run-hook_commands] )) ||
_wt__beta__run-hook_commands() {
    local commands; commands=()
    _describe -t commands 'wt beta run-hook commands' commands "$@"
}
(( $+functions[_wt__beta__select_commands] )) ||
_wt__beta__select_commands() {
    local commands; commands=()
    _describe -t commands 'wt beta select commands' commands "$@"
}
(( $+functions[_wt__beta__squash_commands] )) ||
_wt__beta__squash_commands() {
    local commands; commands=()
    _describe -t commands 'wt beta squash commands' commands "$@"
}
(( $+functions[_wt__config_commands] )) ||
_wt__config_commands() {
    local commands; commands=(
'init:Initialize global configuration file with examples' \
'list:List configuration files & locations' \
'refresh-cache:Refresh default branch from remote' \
'shell:Configure shell integration' \
'status:Manage branch status markers' \
    )
    _describe -t commands 'wt config commands' commands "$@"
}
(( $+functions[_wt__config__init_commands] )) ||
_wt__config__init_commands() {
    local commands; commands=()
    _describe -t commands 'wt config init commands' commands "$@"
}
(( $+functions[_wt__config__list_commands] )) ||
_wt__config__list_commands() {
    local commands; commands=()
    _describe -t commands 'wt config list commands' commands "$@"
}
(( $+functions[_wt__config__refresh-cache_commands] )) ||
_wt__config__refresh-cache_commands() {
    local commands; commands=()
    _describe -t commands 'wt config refresh-cache commands' commands "$@"
}
(( $+functions[_wt__config__shell_commands] )) ||
_wt__config__shell_commands() {
    local commands; commands=()
    _describe -t commands 'wt config shell commands' commands "$@"
}
(( $+functions[_wt__config__status_commands] )) ||
_wt__config__status_commands() {
    local commands; commands=(
'set:Set status emoji for branch' \
'unset:Clear status emoji' \
    )
    _describe -t commands 'wt config status commands' commands "$@"
}
(( $+functions[_wt__config__status__set_commands] )) ||
_wt__config__status__set_commands() {
    local commands; commands=()
    _describe -t commands 'wt config status set commands' commands "$@"
}
(( $+functions[_wt__config__status__unset_commands] )) ||
_wt__config__status__unset_commands() {
    local commands; commands=()
    _describe -t commands 'wt config status unset commands' commands "$@"
}
(( $+functions[_wt__init_commands] )) ||
_wt__init_commands() {
    local commands; commands=()
    _describe -t commands 'wt init commands' commands "$@"
}
(( $+functions[_wt__list_commands] )) ||
_wt__list_commands() {
    local commands; commands=()
    _describe -t commands 'wt list commands' commands "$@"
}
(( $+functions[_wt__merge_commands] )) ||
_wt__merge_commands() {
    local commands; commands=()
    _describe -t commands 'wt merge commands' commands "$@"
}
(( $+functions[_wt__remove_commands] )) ||
_wt__remove_commands() {
    local commands; commands=()
    _describe -t commands 'wt remove commands' commands "$@"
}
(( $+functions[_wt__switch_commands] )) ||
_wt__switch_commands() {
    local commands; commands=()
    _describe -t commands 'wt switch commands' commands "$@"
}

if [ "$funcstack[1]" = "_wt" ]; then
    _wt "$@"
else
    if (( $+functions[compdef] )); then compdef _wt wt; fi
fi

----- stderr -----
